--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
 body {
- 
+	font-family: sans-serif;
+	margin: 50px;
+ 	background: #505050;
+ 	width: 700px;
 }
 
 div {
-	background: grey;
-	border-color: red;
-    margin: 0;
-    padding: 0;
+    background-color: #9BD7D5;
+    text-color: #505050;
 }
