--- a/style.css
+++ b/style.css
@@ -1,11 +1,31 @@
 body {
 	font-family: sans-serif;
-	margin: 50px;
  	background: #505050;
- 	width: 700px;
+ 	width: 100%;
+ 	margin:0 auto;
 }
 
-div {
-    background-color: #9BD7D5;
-    text-color: #505050;
+#Header {
+	background: white;
+	padding: 20px;
+}
+
+#sidebar {
+	float: right;
+	height: 100%;
+	background: blue;
+}
+
+.tweetstream {
+	float: left;
+	width: 70%;
+	background: red;
+	padding: 20px;
+	display: inline;
+}
+
+button {
+	font-size: 20px;
+	width: 200px;
+	background: yellow;
 }
