--- a/style.css
+++ b/style.css
@@ -1,31 +1,60 @@
+html {
+	background: url(background.jpg);
+ 	background-size: 100%;
+}
 body {
 	font-family: sans-serif;
- 	background: #505050;
- 	width: 100%;
- 	margin:0 auto;
 }
 
 #Header {
-	background: white;
-	padding: 20px;
-}
-
-#sidebar {
-	float: right;
-	height: 100%;
-	background: blue;
+	width: 700px;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
 }
 
 .tweetstream {
 	float: left;
-	width: 70%;
-	background: red;
-	padding: 20px;
-	display: inline;
+	width: 700px;
+	background-color: rgba(40, 77, 95, 0.7);
+	/*padding: 20px;*/
+	/*display: inline;*/
+	color: white;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
 }
 
 button {
 	font-size: 20px;
 	width: 200px;
-	background: yellow;
+	background: rgba(182, 110, 57, 0.7);
+	color: white;
+	/*display: inline;*/
+}
+
+
+.tweetbody {
+	/*background: white;*/
+	/*padding: 20px;*/
+	/*margin: 20px;*/
+	padding: 20px;
+	margin-bottom:10px;
+	margin-top: 1px;
+	border-bottom: 1px dotted #CCC; 
+}
+
+h7 {
+	float: right;
+	/*font-style: italic;*/
+	font-size: 12px;
+	/*padding-bottom: 20px;*/
+}
+
+p {
+	padding-left: 50px;
+}
+
+.username {
+	font-weight: bold;
+	font-size: 16px;
+	font-style: italic;
 }
