--- a/style.css
+++ b/style.css
@@ -6,47 +6,48 @@ body {
 	font-family: sans-serif;
 }
 
-#Header {
+#container {
+  width: 700px;
+	margin: 0 auto;
+}
+
+#header {
 	width: 700px;
-	margin-left: 0 auto;
-	margin-right: 0 auto;
+	margin: 0 auto;
+	font-style: italic;
 }
 
 .tweetstream {
-	float: left;
 	width: 700px;
 	background-color: rgba(40, 77, 95, 0.7);
-	/*padding: 20px;*/
-	/*display: inline;*/
 	color: white;
-	margin-left: 0 auto;
-	margin-right: 0 auto;
+	border-radius:20px;
+	border:0;
+	margin: 0 auto;
 }
 
 button {
-	font-size: 20px;
-	width: 200px;
-	background: rgba(182, 110, 57, 0.7);
-	color: white;
-	/*display: inline;*/
+	background-color: rgba(100, 88, 95, 0.7);
+	color:#fff;
+	font-family:'Helvetica Neue',sans-serif;
+	font-size:18px;
+	border-radius:20px;
+	border:0;
+	width:220px;
+	height:32px;
+	margin: 0 auto;
 }
 
 
 .tweetbody {
-	/*background: white;*/
-	/*padding: 20px;*/
-	/*margin: 20px;*/
 	padding: 20px;
-	margin-bottom:10px;
-	margin-top: 1px;
+	margin: 0 auto;
 	border-bottom: 1px dotted #CCC; 
 }
 
 h7 {
 	float: right;
-	/*font-style: italic;*/
 	font-size: 12px;
-	/*padding-bottom: 20px;*/
 }
 
 p {
